[gd_scene load_steps=6 format=3 uid="uid://dioyqkbgskwl5"]

[ext_resource type="Script" path="res://CloudWorld/fedi_server.gd" id="1_insyf"]
[ext_resource type="Script" path="res://CloudWorld/NameLabel.gd" id="2_kh2e0"]
[ext_resource type="Texture2D" uid="uid://sl7dfr4a52fs" path="res://CloudWorld/wood.png" id="3_8d7px"]
[ext_resource type="Theme" uid="uid://ochiaokyyqk4" path="res://theme.tres" id="4_7bo8b"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rvjq7"]
size = Vector2(128, 128)

[node name="FediServer" type="StaticBody2D"]
script = ExtResource("1_insyf")

[node name="IconParent" type="Node2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_rvjq7")

[node name="NameSign" type="Node2D" parent="."]
script = ExtResource("2_kh2e0")

[node name="TextureRect" type="TextureRect" parent="NameSign"]
offset_left = -18.0
offset_top = -24.0
offset_right = 51.0
offset_bottom = 40.0
texture = ExtResource("3_8d7px")
stretch_mode = 1

[node name="NameLabel" type="Label" parent="NameSign"]
offset_left = -18.0
offset_top = -24.0
offset_right = 32.0
offset_bottom = -1.0
theme = ExtResource("4_7bo8b")
text = "dfsfsdf"
